# DjangoOgpView

./: README.md  README_en.md  pyproject.toml
django_ogp/: admin.py  apps.py  enums.py  views.py
django_ogp/locale/ja/LC_MESSAGES/: django.mo
django_ogp/locale/jp/LC_MESSAGES/: django.po
django_ogp/migrations/: 0001_initial.py
django_ogp/models/: __init__.py  masters.py  properties.py
django_ogp/templates/django_ogp/: ogp_meta.html
django_ogp/templatetags/: django_ogp.py
django_ogp/tests/: test_create_master.py
django_ogp/tests/enums/: test_Determiner.py  test_Locale.py  test_MediaType.py  test_MimeType.py  test_OgpType.py  test__print_locale_enum.py  test__print_mimetypes_enum.py
django_ogp/tests/models/masters/: test_OgpLocaleMaster.py  test_OgpMimeTypeMaster.py
django_ogp/tests/models/properties/: test_OgpBasicProperty.py  test_OgpCustomProperty.py  test_OgpMediaProperty.py  test_OgpSiteProperty.py
django_ogp/tests/templatetags/django_ogp/: test_do_add_ogp_meta.py
django_ogp/tests/views/: test_OgpViewMixin.py
