[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ogp-view"
version = "1.1.0"
authors = [
  { name="Taogya", email="132679709+taogya@users.noreply.github.com" },
]
description = "Open Graph Protocol for Django"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
]
[tool.hatch.build]
include = [
    "django_ogp/*",
    "django_ogp/templates",
]
exclude = [
    "build",
    "django_ogp/tests",
    "resources",
]

[project.urls]
"Homepage" = "https://github.com/taogya/DjangoOgpView"
"Bug Tracker" = "https://github.com/taogya/DjangoOgpView/issues"
